fret-electron/app/parser/RequirementParser.js
// Generated from Requirement.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var RequirementListener = require('./RequirementListener').RequirementListener;
var grammarFileName = "Requirement.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'.'", "','", "'!'", "'&'", "'|'", "'('", "')'", 
                     "'true'", "'~'", "'->'", "'=>'", "'<->'", "'<=>'", 
                     "'false'", "'^'", "'-'", "'*'", "'/'", "'+'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, "AFTER", "ALWAYS", "AND", "AT", "BEFORE", 
                      "DURING", "EVENTUALLY", "EXCEPT", "FALSE", "FINALLY", 
                      "FIRST", "FOR", "HOUR", "IF", "IMMEDIATELY", "IN", 
                      "INITIALLY", "IS", "IWC", "LAST", "MICROSECOND", "MILLISECOND", 
                      "MINUTE", "MOD", "MODE", "NEVER", "NEXT", "NOT", "OCCURRENCE", 
                      "OF", "ONLY", "OR", "PREVIOUS", "PROB", "SAME", "SATISFY", 
                      "SECOND", "SHALL", "THE", "THEN", "TICK", "TIMEPOINT", 
                      "TRUE", "UNLESS", "UNTIL", "UPON", "WHAT", "WHEN", 
                      "WHENEVER", "WHERE", "WHILE", "WITH", "WITHIN", "XOR", 
                      "ID", "STRING", "RELATIONAL_OP", "NUMBER", "WS" ];

var ruleNames =  [ "reqt_body", "freeform", "nasa", "sleec", "trigger", 
                   "defeater", "action", "obligation", "cond_expression", 
                   "obl_expression", "predicate", "atomic_predicate", "comparison_predicate", 
                   "var_name", "scope", "reqt_condition", "regular_condition", 
                   "qualifier_word", "qualified_condition1", "qualified_condition2", 
                   "scope_condition", "scope_mode", "pre_condition", "stop_condition", 
                   "component", "response", "satisfaction", "probability", 
                   "probability_aux", "prob_num", "timing", "timing_aux", 
                   "duration_upper", "duration_lower", "component_name", 
                   "mode_name", "duration", "timeunit", "post_condition", 
                   "bool_expr", "numeric_expr" ];

function RequirementParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

RequirementParser.prototype = Object.create(antlr4.Parser.prototype);
RequirementParser.prototype.constructor = RequirementParser;

Object.defineProperty(RequirementParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

RequirementParser.EOF = antlr4.Token.EOF;
RequirementParser.T__0 = 1;
RequirementParser.T__1 = 2;
RequirementParser.T__2 = 3;
RequirementParser.T__3 = 4;
RequirementParser.T__4 = 5;
RequirementParser.T__5 = 6;
RequirementParser.T__6 = 7;
RequirementParser.T__7 = 8;
RequirementParser.T__8 = 9;
RequirementParser.T__9 = 10;
RequirementParser.T__10 = 11;
RequirementParser.T__11 = 12;
RequirementParser.T__12 = 13;
RequirementParser.T__13 = 14;
RequirementParser.T__14 = 15;
RequirementParser.T__15 = 16;
RequirementParser.T__16 = 17;
RequirementParser.T__17 = 18;
RequirementParser.T__18 = 19;
RequirementParser.AFTER = 20;
RequirementParser.ALWAYS = 21;
RequirementParser.AND = 22;
RequirementParser.AT = 23;
RequirementParser.BEFORE = 24;
RequirementParser.DURING = 25;
RequirementParser.EVENTUALLY = 26;
RequirementParser.EXCEPT = 27;
RequirementParser.FALSE = 28;
RequirementParser.FINALLY = 29;
RequirementParser.FIRST = 30;
RequirementParser.FOR = 31;
RequirementParser.HOUR = 32;
RequirementParser.IF = 33;
RequirementParser.IMMEDIATELY = 34;
RequirementParser.IN = 35;
RequirementParser.INITIALLY = 36;
RequirementParser.IS = 37;
RequirementParser.IWC = 38;
RequirementParser.LAST = 39;
RequirementParser.MICROSECOND = 40;
RequirementParser.MILLISECOND = 41;
RequirementParser.MINUTE = 42;
RequirementParser.MOD = 43;
RequirementParser.MODE = 44;
RequirementParser.NEVER = 45;
RequirementParser.NEXT = 46;
RequirementParser.NOT = 47;
RequirementParser.OCCURRENCE = 48;
RequirementParser.OF = 49;
RequirementParser.ONLY = 50;
RequirementParser.OR = 51;
RequirementParser.PREVIOUS = 52;
RequirementParser.PROB = 53;
RequirementParser.SAME = 54;
RequirementParser.SATISFY = 55;
RequirementParser.SECOND = 56;
RequirementParser.SHALL = 57;
RequirementParser.THE = 58;
RequirementParser.THEN = 59;
RequirementParser.TICK = 60;
RequirementParser.TIMEPOINT = 61;
RequirementParser.TRUE = 62;
RequirementParser.UNLESS = 63;
RequirementParser.UNTIL = 64;
RequirementParser.UPON = 65;
RequirementParser.WHAT = 66;
RequirementParser.WHEN = 67;
RequirementParser.WHENEVER = 68;
RequirementParser.WHERE = 69;
RequirementParser.WHILE = 70;
RequirementParser.WITH = 71;
RequirementParser.WITHIN = 72;
RequirementParser.XOR = 73;
RequirementParser.ID = 74;
RequirementParser.STRING = 75;
RequirementParser.RELATIONAL_OP = 76;
RequirementParser.NUMBER = 77;
RequirementParser.WS = 78;

RequirementParser.RULE_reqt_body = 0;
RequirementParser.RULE_freeform = 1;
RequirementParser.RULE_nasa = 2;
RequirementParser.RULE_sleec = 3;
RequirementParser.RULE_trigger = 4;
RequirementParser.RULE_defeater = 5;
RequirementParser.RULE_action = 6;
RequirementParser.RULE_obligation = 7;
RequirementParser.RULE_cond_expression = 8;
RequirementParser.RULE_obl_expression = 9;
RequirementParser.RULE_predicate = 10;
RequirementParser.RULE_atomic_predicate = 11;
RequirementParser.RULE_comparison_predicate = 12;
RequirementParser.RULE_var_name = 13;
RequirementParser.RULE_scope = 14;
RequirementParser.RULE_reqt_condition = 15;
RequirementParser.RULE_regular_condition = 16;
RequirementParser.RULE_qualifier_word = 17;
RequirementParser.RULE_qualified_condition1 = 18;
RequirementParser.RULE_qualified_condition2 = 19;
RequirementParser.RULE_scope_condition = 20;
RequirementParser.RULE_scope_mode = 21;
RequirementParser.RULE_pre_condition = 22;
RequirementParser.RULE_stop_condition = 23;
RequirementParser.RULE_component = 24;
RequirementParser.RULE_response = 25;
RequirementParser.RULE_satisfaction = 26;
RequirementParser.RULE_probability = 27;
RequirementParser.RULE_probability_aux = 28;
RequirementParser.RULE_prob_num = 29;
RequirementParser.RULE_timing = 30;
RequirementParser.RULE_timing_aux = 31;
RequirementParser.RULE_duration_upper = 32;
RequirementParser.RULE_duration_lower = 33;
RequirementParser.RULE_component_name = 34;
RequirementParser.RULE_mode_name = 35;
RequirementParser.RULE_duration = 36;
RequirementParser.RULE_timeunit = 37;
RequirementParser.RULE_post_condition = 38;
RequirementParser.RULE_bool_expr = 39;
RequirementParser.RULE_numeric_expr = 40;


function Reqt_bodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_reqt_body;
    return this;
}

Reqt_bodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Reqt_bodyContext.prototype.constructor = Reqt_bodyContext;

Reqt_bodyContext.prototype.nasa = function() {
    return this.getTypedRuleContext(NasaContext,0);
};

Reqt_bodyContext.prototype.sleec = function() {
    return this.getTypedRuleContext(SleecContext,0);
};

Reqt_bodyContext.prototype.freeform = function() {
    return this.getTypedRuleContext(FreeformContext,0);
};

Reqt_bodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterReqt_body(this);
	}
};

Reqt_bodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitReqt_body(this);
	}
};




RequirementParser.Reqt_bodyContext = Reqt_bodyContext;

RequirementParser.prototype.reqt_body = function() {

    var localctx = new Reqt_bodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, RequirementParser.RULE_reqt_body);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 85;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            this.state = 82;
            this.nasa();
            break;

        case 2:
            this.state = 83;
            this.sleec();
            break;

        case 3:
            this.state = 84;
            this.freeform();
            break;

        }
        this.state = 88;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RequirementParser.T__0) {
            this.state = 87;
            this.match(RequirementParser.T__0);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FreeformContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_freeform;
    return this;
}

FreeformContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FreeformContext.prototype.constructor = FreeformContext;

FreeformContext.prototype.STRING = function() {
    return this.getToken(RequirementParser.STRING, 0);
};

FreeformContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterFreeform(this);
	}
};

FreeformContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitFreeform(this);
	}
};




RequirementParser.FreeformContext = FreeformContext;

RequirementParser.prototype.freeform = function() {

    var localctx = new FreeformContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, RequirementParser.RULE_freeform);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90;
        this.match(RequirementParser.STRING);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function NasaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_nasa;
    return this;
}

NasaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NasaContext.prototype.constructor = NasaContext;

NasaContext.prototype.response = function() {
    return this.getTypedRuleContext(ResponseContext,0);
};

NasaContext.prototype.component = function() {
    return this.getTypedRuleContext(ComponentContext,0);
};

NasaContext.prototype.SHALL = function() {
    return this.getToken(RequirementParser.SHALL, 0);
};

NasaContext.prototype.scope = function() {
    return this.getTypedRuleContext(ScopeContext,0);
};

NasaContext.prototype.reqt_condition = function() {
    return this.getTypedRuleContext(Reqt_conditionContext,0);
};

NasaContext.prototype.probability = function() {
    return this.getTypedRuleContext(ProbabilityContext,0);
};

NasaContext.prototype.timing = function() {
    return this.getTypedRuleContext(TimingContext,0);
};

NasaContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterNasa(this);
	}
};

NasaContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitNasa(this);
	}
};




RequirementParser.NasaContext = NasaContext;

RequirementParser.prototype.nasa = function() {

    var localctx = new NasaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, RequirementParser.RULE_nasa);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        if(la_===1) {
            this.state = 92;
            this.scope();

        }
        this.state = 96;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RequirementParser.AND || _la===RequirementParser.IF || ((((_la - 63)) & ~0x1f) == 0 && ((1 << (_la - 63)) & ((1 << (RequirementParser.UNLESS - 63)) | (1 << (RequirementParser.UPON - 63)) | (1 << (RequirementParser.WHEN - 63)) | (1 << (RequirementParser.WHENEVER - 63)) | (1 << (RequirementParser.WHERE - 63)))) !== 0)) {
            this.state = 95;
            this.reqt_condition();
        }

        this.state = 103;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case RequirementParser.THE:
        case RequirementParser.ID:
            this.state = 98;
            this.component();
            this.state = 99;
            this.match(RequirementParser.SHALL);
            break;
        case RequirementParser.SHALL:
            this.state = 101;
            this.match(RequirementParser.SHALL);
            this.state = 102;
            this.component();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 106;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        if(la_===1) {
            this.state = 105;
            this.probability();

        }
        this.state = 109;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << RequirementParser.T__1) | (1 << RequirementParser.AFTER) | (1 << RequirementParser.ALWAYS) | (1 << RequirementParser.AT) | (1 << RequirementParser.BEFORE) | (1 << RequirementParser.EVENTUALLY) | (1 << RequirementParser.FINALLY) | (1 << RequirementParser.FOR))) !== 0) || ((((_la - 34)) & ~0x1f) == 0 && ((1 << (_la - 34)) & ((1 << (RequirementParser.IMMEDIATELY - 34)) | (1 << (RequirementParser.INITIALLY - 34)) | (1 << (RequirementParser.NEVER - 34)) | (1 << (RequirementParser.UNTIL - 34)))) !== 0) || _la===RequirementParser.WITHIN) {
            this.state = 108;
            this.timing();
        }

        this.state = 111;
        this.response();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SleecContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_sleec;
    return this;
}

SleecContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SleecContext.prototype.constructor = SleecContext;

SleecContext.prototype.IF = function() {
    return this.getToken(RequirementParser.IF, 0);
};

SleecContext.prototype.trigger = function() {
    return this.getTypedRuleContext(TriggerContext,0);
};

SleecContext.prototype.THEN = function() {
    return this.getToken(RequirementParser.THEN, 0);
};

SleecContext.prototype.action = function() {
    return this.getTypedRuleContext(ActionContext,0);
};

SleecContext.prototype.EOF = function() {
    return this.getToken(RequirementParser.EOF, 0);
};

SleecContext.prototype.scope = function() {
    return this.getTypedRuleContext(ScopeContext,0);
};

SleecContext.prototype.timing = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TimingContext);
    } else {
        return this.getTypedRuleContext(TimingContext,i);
    }
};

SleecContext.prototype.UNLESS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RequirementParser.UNLESS);
    } else {
        return this.getToken(RequirementParser.UNLESS, i);
    }
};


SleecContext.prototype.defeater = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DefeaterContext);
    } else {
        return this.getTypedRuleContext(DefeaterContext,i);
    }
};

SleecContext.prototype.IWC = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RequirementParser.IWC);
    } else {
        return this.getToken(RequirementParser.IWC, i);
    }
};


SleecContext.prototype.obligation = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ObligationContext);
    } else {
        return this.getTypedRuleContext(ObligationContext,i);
    }
};

SleecContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterSleec(this);
	}
};

SleecContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitSleec(this);
	}
};




RequirementParser.SleecContext = SleecContext;

RequirementParser.prototype.sleec = function() {

    var localctx = new SleecContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, RequirementParser.RULE_sleec);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        if(la_===1) {
            this.state = 113;
            this.scope();

        }
        this.state = 116;
        this.match(RequirementParser.IF);
        this.state = 117;
        this.trigger();
        this.state = 118;
        this.match(RequirementParser.THEN);
        this.state = 120;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << RequirementParser.T__1) | (1 << RequirementParser.AFTER) | (1 << RequirementParser.ALWAYS) | (1 << RequirementParser.AT) | (1 << RequirementParser.BEFORE) | (1 << RequirementParser.EVENTUALLY) | (1 << RequirementParser.FINALLY) | (1 << RequirementParser.FOR))) !== 0) || ((((_la - 34)) & ~0x1f) == 0 && ((1 << (_la - 34)) & ((1 << (RequirementParser.IMMEDIATELY - 34)) | (1 << (RequirementParser.INITIALLY - 34)) | (1 << (RequirementParser.NEVER - 34)) | (1 << (RequirementParser.UNTIL - 34)))) !== 0) || _la===RequirementParser.WITHIN) {
            this.state = 119;
            this.timing();
        }

        this.state = 122;
        this.action();
        this.state = 136;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RequirementParser.T__1 || _la===RequirementParser.UNLESS) {
            this.state = 124;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===RequirementParser.T__1) {
                this.state = 123;
                this.match(RequirementParser.T__1);
            }

            this.state = 126;
            this.match(RequirementParser.UNLESS);
            this.state = 127;
            this.defeater();
            this.state = 128;
            this.match(RequirementParser.IWC);
            this.state = 130;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << RequirementParser.T__1) | (1 << RequirementParser.AFTER) | (1 << RequirementParser.ALWAYS) | (1 << RequirementParser.AT) | (1 << RequirementParser.BEFORE) | (1 << RequirementParser.EVENTUALLY) | (1 << RequirementParser.FINALLY) | (1 << RequirementParser.FOR))) !== 0) || ((((_la - 34)) & ~0x1f) == 0 && ((1 << (_la - 34)) & ((1 << (RequirementParser.IMMEDIATELY - 34)) | (1 << (RequirementParser.INITIALLY - 34)) | (1 << (RequirementParser.NEVER - 34)) | (1 << (RequirementParser.UNTIL - 34)))) !== 0) || _la===RequirementParser.WITHIN) {
                this.state = 129;
                this.timing();
            }

            this.state = 132;
            this.obligation();
            this.state = 138;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 139;
        this.match(RequirementParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TriggerContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_trigger;
    return this;
}

TriggerContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TriggerContext.prototype.constructor = TriggerContext;

TriggerContext.prototype.cond_expression = function() {
    return this.getTypedRuleContext(Cond_expressionContext,0);
};

TriggerContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterTrigger(this);
	}
};

TriggerContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitTrigger(this);
	}
};




RequirementParser.TriggerContext = TriggerContext;

RequirementParser.prototype.trigger = function() {

    var localctx = new TriggerContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, RequirementParser.RULE_trigger);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 141;
        this.cond_expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DefeaterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_defeater;
    return this;
}

DefeaterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefeaterContext.prototype.constructor = DefeaterContext;

DefeaterContext.prototype.cond_expression = function() {
    return this.getTypedRuleContext(Cond_expressionContext,0);
};

DefeaterContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterDefeater(this);
	}
};

DefeaterContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitDefeater(this);
	}
};




RequirementParser.DefeaterContext = DefeaterContext;

RequirementParser.prototype.defeater = function() {

    var localctx = new DefeaterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, RequirementParser.RULE_defeater);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 143;
        this.cond_expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ActionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_action;
    return this;
}

ActionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ActionContext.prototype.constructor = ActionContext;

ActionContext.prototype.obl_expression = function() {
    return this.getTypedRuleContext(Obl_expressionContext,0);
};

ActionContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterAction(this);
	}
};

ActionContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitAction(this);
	}
};




RequirementParser.ActionContext = ActionContext;

RequirementParser.prototype.action = function() {
